metadata/force-app/main/default/objects/CustomName_IATwc__c/CustomName_IATwc__c.object-meta.xml
<CustomObject>
    <description>Description_DKgTS</description>
    <label>CustomLabel_juIrD</label>
    <nameField>
        <label>CustomLabel_juIrD</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_juIrDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>