metadata/force-app/main/default/objects/CustomName_IATwc__c/fields/CustomField_aRiIe__c.field-meta.xml
<CustomField>
    <fullName>CustomField_aRiIe__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldNyiZv</label>
    <length>255</length>
    <type>Text</type>
</CustomField>